<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/header"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:drawableLeft="@drawable/home"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:drawableLeft="@drawable/profile"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/events"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:drawableLeft="@drawable/event_available"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favor"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:drawableLeft="@drawable/favorite"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inbox"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:drawableLeft="@drawable/inbox"/>

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="10dp"
                    android:text="2"
                    android:gravity="center"
                    android:textSize="10sp"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/notifi_shape"
                    />
            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:paddingLeft="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:padding="3dp"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:drawableLeft="@drawable/call"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feed"
                android:padding="3dp"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:drawableLeft="@drawable/ic_feed"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:padding="3dp"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:drawableLeft="@drawable/ic_settings"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            style="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
            android:padding="3dp"
            android:textColor="#fff"/>
        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/dashboard_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_logout"
            android:drawableStart="@drawable/ic_logout"
            android:textSize="15sp"
            android:padding="5dp"
            android:textColor="#fff"/>

    </LinearLayout>


</ScrollView>