<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:gravity="center_vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:weightSum="5"
    android:background="#FFF">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_gravity="start|center_vertical"
        android:gravity="center_horizontal"
        android:layout_weight="1">


        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/school"
            android:scaleType="center"
            android:background="@drawable/shape"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            style="@style/Base.TextAppearance.AppCompat.Caption"/>


    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:layout_weight="1">


        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_pen"
            android:scaleType="center"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            style="@style/Base.TextAppearance.AppCompat.Caption"/>


    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="end|center_vertical"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:padding="5dp">


        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/school"
            android:scaleType="center"
            android:background="@drawable/shape"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            style="@style/Base.TextAppearance.AppCompat.Caption" />


    </LinearLayout>


</LinearLayout>